<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meet">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-28dp">

        <EditText
            android:id="@+id/etSearchWord"
            android:layout_width="397dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="検索キーワードを入力してください"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <Button
            android:id="@+id/btMapSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_rounded"
            android:onClick="onMapSearchButtonClick"
            android:text="@string/bt_map_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearchWord" />

        <TextView
            android:id="@+id/tvLatitudeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_latitude_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.167" />

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            app:layout_constraintStart_toEndOf="@+id/tvLatitudeTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLongitudeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_longitude_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.218" />

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/tvLongitudeTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btMapShowCurrent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_rounded"
            android:onClick="onMapShowCurrentButtonClick"
            android:text="@string/bt_map_current"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/countdownTextView"
            android:layout_width="105dp"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:text="00:00:00"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setAlarmButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/setAlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="@string/bt_alarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePicker" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btMapSearch" />

        <TextView
            android:id="@+id/tvCurrentTitle"
            android:layout_width="49dp"
            android:layout_height="21dp"
            android:text="@string/tv_current_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.188" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="395dp"
            android:layout_height="65dp"
            android:text="@string/tv_recommend"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="389dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_meet"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_horizontal_center" />

        <View
            android:id="@+id/line_horizontal_center"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="?attr/colorAccent"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btMapShowCurrent" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#F4F4F4"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-16dp"
                android:layout_marginEnd="318dp"
                android:layout_marginBottom="668dp"
                android:background="@android:drawable/ic_menu_revert"
                android:backgroundTint="#AE1EE428"
                android:text="@string/bt_back"
                android:textColor="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="411dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-382dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="19dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:backgroundTint="#AE1EE428"
                android:gravity="center"
                android:text="@string/tv_meet_title"
                android:textColor="@color/white"
                android:textSize="34sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>