<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_image"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="500dp"
                android:layout_height="70dp"
                android:layout_below="@+id/button3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="-2dp"
                android:backgroundTint="#B0AFAAB1"
                android:text="@string/bt_setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button3"
                android:layout_width="500dp"
                android:layout_height="70dp"
                android:layout_below="@+id/button2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="-1dp"
                android:backgroundTint="#B41EE428"
                android:text="@string/bt_talk"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button2"
                android:layout_width="500dp"
                android:layout_height="70dp"
                android:layout_below="@+id/button5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="-2dp"
                android:backgroundTint="#B0EC5020"
                android:text="@string/bt_recomend"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button5"
                android:layout_width="500dp"
                android:layout_height="70dp"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#B008A7EF"
                android:text="@string/bt_weather"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="383dp"
                android:layout_height="117dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="13dp"
                android:layout_marginTop="74dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tv_title"
                android:textSize="34sp"
                android:gravity="center"
                android:textColor="#CDDC39"
                android:letterSpacing="0.1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>