<?xml version="1.0" encoding="utf-8"?>
<!--
『Androidアプリ開発の教科書』
第11章
Web API連携サンプル

@author Shinzo SAITO

ファイル名=activity_main.xml
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weather">


    <EditText
        android:id="@+id/etSearch"
        android:layout_width="410dp"
        android:layout_height="55dp"
        android:hint="Enter prefecture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_weather_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <TextView
        android:id="@+id/tvWinfoTitle"
        android:layout_width="225dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        android:text="@string/tv_winfo_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <TextView
        android:id="@+id/tvWeatherTelop"
        android:layout_width="189dp"
        android:layout_height="84dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWinfoTitle" />

    <TextView
        android:id="@+id/tvWeatherDesc"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvWeatherDesc2"
        android:layout_width="101dp"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvWeatherDesc3"
        android:layout_width="101dp"
        android:layout_height="78dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="190dp"
        android:layout_height="101dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        android:text="@string/tv_weather"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherTelop" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="190dp"
        android:layout_height="101dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        android:text="@string/tv_temp_max"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherDesc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="101dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        android:text="@string/tv_temp_min"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherDesc7" />

    <TextView
        android:id="@+id/tvWeatherHumidit"
        android:layout_width="190dp"
        android:layout_height="101dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        android:text="@string/tv_temp_mio"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherTelop" />

    <TextView
        android:id="@+id/tvWeatherDesc7"
        android:layout_width="101dp"
        android:layout_height="78dp"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherHumidit" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#F4F4F4"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button5"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-16dp"
            android:layout_marginEnd="318dp"
            android:layout_marginBottom="668dp"
            android:background="@android:drawable/ic_menu_revert"
            android:backgroundTint="#8008A7EF"
            android:text="@string/bt_back"
            android:textColor="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="411dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-382dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:backgroundTint="#8008A7EF"
            android:gravity="center"
            android:text="@string/tv_weather_title"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
