<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting">

    <!-- Spinner（プルダウン）の定義 -->

    <!-- Buttonの定義 -->

    <!-- TextViewの定義 -->

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="365dp"
        android:layout_height="74dp"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/alert_light_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/changeLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageSpinner"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#F4F4F4"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button5"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-16dp"
            android:layout_marginEnd="318dp"
            android:layout_marginBottom="668dp"
            android:background="@android:drawable/ic_menu_revert"
            android:backgroundTint="#63AFAAB1"
            android:text="@string/bt_back"
            android:textColor="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="411dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-382dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:backgroundTint="#63AFAAB1"
            android:gravity="center"
            android:text="@string/tv_setting_title"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>